--- a/app/src/main/res/layout/activity_leyenda.xml
+++ b/app/src/main/res/layout/activity_leyenda.xml
@@ -1,37 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#128897"
-    tools:context=".Leyendas">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical">
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="326dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="16dp"
-        android:text="La Leyenda de la Silla del Moro"
-        android:textColor="#FFFFFF"
-        android:textSize="36sp"
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:layout_marginTop="36dp"
+        android:fontFamily="cursive"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="353dp"
-        android:layout_height="508dp"
-        android:layout_marginStart="12dp"
-        android:text="La vida supuestamente disoluta que llevaba el rey Boabdil, al parecer dio lugar a un amotinamiento en la ciudad de Alhambra. Por este motivo, el rey tuvo que refugiarse en una apartada colina desde la que, sentado en su cima, divisaba su ciudad sublevada, que por tal razón aún hoy es así conocida."
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.63"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.721" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
+    <ScrollView
+        tools:layout_editor_absoluteX="203dp"
+        tools:layout_editor_absoluteY="116dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="411dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="568dp"
+                android:background="#95FDFDFD"
+                android:fontFamily="cursive"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="italic" />
+
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
